--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -32,7 +32,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: @SSL-ENABLED@
-  forward-headers-strategy: framework
+  forward-headers-strategy: native
   shutdown: graceful
   port: ${SERVER_PORT:1111}
   servlet:
@@ -63,11 +63,6 @@ spring:
       repository-type: indexed
       namespace: spring:session:auth
     timeout: 3600
-  zookeeper:
-    address: zookeeper:2181
-    data-center-id: 1
-    session-timeout-ms: 60000
-    connection-timeout-ms: 15000
   # mail
   mail:
     host: smtp.163.com
