--- a/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-oss/laokou-oss-start/src/main/resources/application.yml
@@ -18,7 +18,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: @SSL-ENABLED@
-  forward-headers-strategy: framework
+  forward-headers-strategy: native
   shutdown: graceful
 
 spring:
