--- a/laokou-service/laokou-generator/laokou-generator-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-generator/laokou-generator-start/src/main/resources/application.yml
@@ -17,7 +17,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: @SSL-ENABLED@
-  forward-headers-strategy: framework
+  forward-headers-strategy: native
   shutdown: graceful
 spring:
   threads:
