--- a/laokou-service/laokou-report/laokou-report-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-report/laokou-report-start/src/main/resources/application.yml
@@ -30,7 +30,7 @@ server:
     key-store-password: laokou
   http2:
     enabled: @SSL-ENABLED@
-  forward-headers-strategy: framework
+  forward-headers-strategy: native
   shutdown: graceful
 # spring
 spring:
