feat: 手动移除redis的缓存

--- a/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-admin/laokou-admin-start/src/main/resources/bootstrap.yml
@@ -57,7 +57,8 @@ dubbo:
     group: DUBBO_${NACOS-GROUP}
   protocol:
     name: dubbo
-    port: -1
+    port: 0
   application:
     name: dubbo-${spring.application.name}
     logger: slf4j
+    qos-port: 0
