--- a/laokou-common/laokou-common-fury/pom.xml
+++ b/laokou-common/laokou-common-fury/pom.xml
@@ -16,6 +16,10 @@
       <groupId>org.apache.fury</groupId>
       <artifactId>fury-core</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.apache.fury</groupId>
+      <artifactId>fury-extensions</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
