--- a/laokou-common/laokou-common-mybatis-plus/pom.xml
+++ b/laokou-common/laokou-common-mybatis-plus/pom.xml
@@ -77,6 +77,10 @@
       <artifactId>fury-core</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.fury</groupId>
+      <artifactId>fury-extensions</artifactId>
+    </dependency>
+    <dependency>
       <groupId>com.baomidou</groupId>
       <artifactId>mybatis-plus-extension</artifactId>
     </dependency>
