--- a/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
+++ b/laokou-service/laokou-admin/laokou-admin-infrastructure/pom.xml
@@ -153,6 +153,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-dubbo</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-admin-client</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
