--- a/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/src/test/resources/application.yml
+++ b/laokou-common/laokou-common-network/laokou-common-network-mqtt-client/src/test/resources/application.yml
@@ -32,7 +32,7 @@ spring:
       # acks=0 ： 生产者在成功写入消息之前不会等待任何来自服务器的响应。
       # acks=1 ： 只要集群的首领节点收到消息，生产者就会收到一个来自服务器成功响应。
       # acks=all ：只有当所有参与复制的节点全部收到消息时，生产者才会收到一个来自服务器的成功响应。
-      acks: 0
+      acks: all
     listener:
       # 在侦听器容器中运行的线程数。
       concurrency: 5
