--- a/laokou-common/laokou-common-plugin/pom.xml
+++ b/laokou-common/laokou-common-plugin/pom.xml
@@ -11,4 +11,11 @@
 
   <artifactId>laokou-common-plugin</artifactId>
 
+  <dependencies>
+    <dependency>
+      <groupId>org.pf4j</groupId>
+      <artifactId>pf4j-spring</artifactId>
+    </dependency>
+  </dependencies>
+
 </project>
