--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,16 @@
       <name>Infinite Automation Release Repository</name>
       <url>https://maven.mangoautomation.net/repository/ias-release/</url>
     </repository>
+    <repository>
+      <id>sonatype-nexus-snapshots</id>
+      <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+      <releases>
+        <enabled>false</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
   </repositories>
 
   <profiles>
