--- a/laokou-common/laokou-common-log/pom.xml
+++ b/laokou-common/laokou-common-log/pom.xml
@@ -17,6 +17,10 @@
       <artifactId>laokou-common-domain</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-dubbo</artifactId>
+    </dependency>
+    <dependency>
       <groupId>jakarta.servlet</groupId>
       <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
