--- a/ui/package.json
+++ b/ui/package.json
@@ -11,7 +11,10 @@
     "start": "npm run dev"
   },
   "dependencies": {
+    "@ant-design/charts": "^2.3.0",
     "@ant-design/icons": "^6.0.0",
+    "@ant-design/plots": "^2.4.0",
+    "@ant-design/pro-card": "^2.9.7",
     "@ant-design/pro-components": "^2.8.6",
     "@ant-design/pro-form": "^2.31.6",
     "@ant-design/pro-layout": "^7.22.3",
