--- a/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/application.yml
@@ -136,39 +136,49 @@ spring:
   kafka:
     bootstrap-servers: kafka:9092
     consumer:
+      # 消费者组ID
       group-id: ${spring.application.name}
       # 禁用自动提交（按周期）已消费offset
-      enable-auto-commit: true
+      enable-auto-commit: false
       # 单次poll()调用返回的记录数
-      max-poll-records: 50
+      max-poll-records: 500
+      # 键的序列化方式
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      # 值的序列化方式
       value-deserializer: org.laokou.common.kafka.config.FuryKafkaDeserializer
+      # 单位拉取量
+      fetch-min-size: 1048576
     producer:
       # 发生错误后，消息重发的次数。
       retries: 5
       # 当有多个消息需要被发送到同一个分区时，生产者会把它们放在同一个批次里。该参数指定了一个批次可以使用的内存大小，按照字节数计算。
-      batch-size: 16384
+      batch-size: 1048576
       # 设置生产者内存缓冲区的大小。
       buffer-memory: 33554432
       # 键的序列化方式
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       # 值的序列化方式
-      value-serializer: org.laokou.common.kafka.config.FuryKafkaDeserializer
+      value-serializer: org.laokou.common.kafka.config.FuryKafkaSerializer
       # acks=0 ： 生产者在成功写入消息之前不会等待任何来自服务器的响应。
       # acks=1 ： 只要集群的首领节点收到消息，生产者就会收到一个来自服务器成功响应。
       # acks=all ：只有当所有参与复制的节点全部收到消息时，生产者才会收到一个来自服务器的成功响应。
       acks: all
+      # 启用消息压缩
+      compression-type: lz4
     listener:
       # 在侦听器容器中运行的线程数。
       concurrency: 5
       # 批量提交模式
-      ack-mode: batch
+      ack-mode: manual
       # 批量batch类型
       type: batch
       # topic不存在报错
       missing-topics-fatal: true
+      observation-enabled: true
     admin:
       auto-create: true
+    template:
+      observation-enabled: true
   cloud:
     # Loadbalancer配置
     loadbalancer:
