--- a/laokou-common/laokou-common-graalvm-js/pom.xml
+++ b/laokou-common/laokou-common-graalvm-js/pom.xml
@@ -32,20 +32,12 @@
       <artifactId>spring-boot-starter</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-test</artifactId>
-      <scope>test</scope>
-      <optional>true</optional>
+      <groupId>com.github.ben-manes.caffeine</groupId>
+      <artifactId>caffeine</artifactId>
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-log4j2</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>org.apache.logging.log4j</groupId>
-          <artifactId>log4j-slf4j2-impl</artifactId>
-        </exclusion>
-      </exclusions>
+      <artifactId>laokou-common-test</artifactId>
       <scope>test</scope>
       <optional>true</optional>
     </dependency>
@@ -54,6 +46,10 @@
       <artifactId>spring-boot-starter-web</artifactId>
       <optional>true</optional>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
     </dependency>
   </dependencies>
 
