--- a/laokou-common/laokou-common-dubbo/pom.xml
+++ b/laokou-common/laokou-common-dubbo/pom.xml
@@ -13,6 +13,39 @@
 
   <dependencies>
     <dependency>
+      <groupId>org.apache.dubbo.extensions</groupId>
+      <artifactId>dubbo-serialization-fury</artifactId>
+      <version>3.3.1</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.fury</groupId>
+          <artifactId>fury-core</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.dubbo.extensions</groupId>
+      <artifactId>dubbo-serialization-kryo</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>com.esotericsoftware</groupId>
+          <artifactId>kryo</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.fury</groupId>
+      <artifactId>fury-core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.esotericsoftware</groupId>
+      <artifactId>kryo</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.fury</groupId>
+      <artifactId>fury-extensions</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.dubbo</groupId>
       <artifactId>dubbo-spring-boot-starter</artifactId>
     </dependency>
