--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -118,37 +118,44 @@ spring:
         # 开启Nacos路由负载均衡
         enabled: true
     gateway:
-      discovery:
-        locator:
-          # 关闭动态生成路由 => DiscoveryClientRouteDefinitionLocator
-          # 查看DiscoveryLocatorProperties
-          enabled: false
-          # 开启服务ID强制小写
-          lower-case-service-id: true
-      httpclient:
-        ssl:
-          # 信任所有下游证书
-          use-insecure-trust-manager: @SSL-ENABLED@
-        # 关闭netty日志
-        wiretap: false
-        pool:
-          # 连接池中连接的最大空闲时间
-          max-idle-time: 10m
-          # 最大连接数
-          max-connections: 10000
-          # 连接池中连接的最大存活时间
-          max-life-time: 5m
-          # elastic   无线扩展的线程池（弹性线程池，连接数不可控）
-          # fixed     固定数量线程池
-          # disabled  不使用线程池（只有一个线程）
-          type: fixed
-          # 必须是fixed，线程池获取连接最大等待时间（毫秒）
-          acquire-timeout: 60000
-        # 连接超时时间（毫秒），默认30s
-        connect-timeout: 60000
-      httpserver:
-        # 关闭netty日志
-        wiretap: false
+      server:
+        webflux:
+          discovery:
+            locator:
+              # 关闭动态生成路由 => DiscoveryClientRouteDefinitionLocator
+              # 查看DiscoveryLocatorProperties
+              enabled: false
+              # 开启服务ID强制小写
+              lower-case-service-id: true
+          httpclient:
+            ssl:
+              # 信任所有下游证书
+              use-insecure-trust-manager: @SSL-ENABLED@
+            # 关闭netty日志
+            wiretap: false
+            pool:
+              # 连接池中连接的最大空闲时间
+              max-idle-time: 10m
+              # 最大连接数
+              max-connections: 10000
+              # 连接池中连接的最大存活时间
+              max-life-time: 5m
+              # elastic   无线扩展的线程池（弹性线程池，连接数不可控）
+              # fixed     固定数量线程池
+              # disabled  不使用线程池（只有一个线程）
+              type: fixed
+              # 必须是fixed，线程池获取连接最大等待时间（毫秒）
+              acquire-timeout: 60000
+            # 连接超时时间（毫秒），默认30s
+            connect-timeout: 60000
+          httpserver:
+            # 关闭netty日志
+            wiretap: false
+          filter:
+            circuit-breaker:
+              enabled: true
+            request-rate-limiter:
+              enabled: true
 
 # actuator
 management:
@@ -201,4 +208,9 @@ knife4j:
         url: /admin/v3/api-docs?group=default
         service-name: laokou-admin
         context-path: /admin
+        order: 2
+      - name: IoT服务
+        url: /iot/v3/api-docs?group=default
+        service-name: laokou-iot
+        context-path: /iot
         order: 2
