--- a/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/bootstrap.yml
@@ -58,6 +58,8 @@ dubbo:
   protocol:
     name: dubbo
     port: 0
+    serialization: fury
+    prefer-serialization: fury,kryo
   application:
     name: dubbo-${spring.application.name}
     logger: slf4j
