--- a/laokou-common/laokou-common-dubbo/pom.xml
+++ b/laokou-common/laokou-common-dubbo/pom.xml
@@ -15,7 +15,6 @@
     <dependency>
       <groupId>org.apache.dubbo.extensions</groupId>
       <artifactId>dubbo-serialization-fury</artifactId>
-      <version>3.3.1</version>
       <exclusions>
         <exclusion>
           <groupId>org.apache.fury</groupId>
@@ -24,26 +23,8 @@
       </exclusions>
     </dependency>
     <dependency>
-      <groupId>org.apache.dubbo.extensions</groupId>
-      <artifactId>dubbo-serialization-kryo</artifactId>
-      <exclusions>
-        <exclusion>
-          <groupId>com.esotericsoftware</groupId>
-          <artifactId>kryo</artifactId>
-        </exclusion>
-      </exclusions>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.fury</groupId>
-      <artifactId>fury-core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>com.esotericsoftware</groupId>
-      <artifactId>kryo</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.fury</groupId>
-      <artifactId>fury-extensions</artifactId>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-fury</artifactId>
     </dependency>
     <dependency>
       <groupId>org.apache.dubbo</groupId>
