feat: 提交文档，gateway的服务已降级增加国际化配置

--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -120,6 +120,7 @@ spring:
     gateway:
       server:
         webflux:
+          enabled: true
           discovery:
             locator:
               # 关闭动态生成路由 => DiscoveryClientRouteDefinitionLocator
