fix: GitHub Maven CI报错

--- a/laokou-service/laokou-network/laokou-http-server/laokou-http-server-domain/pom.xml
+++ b/laokou-service/laokou-network/laokou-http-server/laokou-http-server-domain/pom.xml
@@ -7,6 +7,6 @@
     <version>3.5.1</version>
   </parent>
 
-  <artifactId>laokou-http-domain</artifactId>
+  <artifactId>laokou-http-server-domain</artifactId>
 
 </project>
