--- a/laokou-common/laokou-common-redis/pom.xml
+++ b/laokou-common/laokou-common-redis/pom.xml
@@ -59,7 +59,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-fury</artifactId>
+      <artifactId>laokou-common-fory</artifactId>
     </dependency>
   </dependencies>
 </project>
