--- a/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/laokou-auth-start/src/main/resources/application.yml
@@ -225,7 +225,7 @@ spring:
       # 键的序列化方式
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
       # 值的序列化方式
-      value-deserializer: org.laokou.common.kafka.config.FuryKafkaDeserializer
+      value-deserializer: org.laokou.common.kafka.config.ForyKafkaDeserializer
       # 单位拉取量
       fetch-min-size: 102400
     producer:
@@ -238,7 +238,7 @@ spring:
       # 键的序列化方式
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
       # 值的序列化方式
-      value-serializer: org.laokou.common.kafka.config.FuryKafkaSerializer
+      value-serializer: org.laokou.common.kafka.config.ForyKafkaSerializer
       # acks=0 ： 生产者在成功写入消息之前不会等待任何来自服务器的响应。
       # acks=1 ： 只要集群的首领节点收到消息，生产者就会收到一个来自服务器成功响应。
       # acks=all ：只有当所有参与复制的节点全部收到消息时，生产者才会收到一个来自服务器的成功响应。
