--- a/laokou-common/laokou-common-pulsar/pom.xml
+++ b/laokou-common/laokou-common-pulsar/pom.xml
@@ -22,7 +22,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-fury</artifactId>
+      <artifactId>laokou-common-fory</artifactId>
     </dependency>
   </dependencies>
 
