--- a/laokou-common/pom.xml
+++ b/laokou-common/pom.xml
@@ -79,7 +79,7 @@
     <module>laokou-common-modbus4j</module>
     <module>laokou-common-pulsar</module>
     <module>laokou-common-coap</module>
-    <module>laokou-common-fury</module>
+    <module>laokou-common-fory</module>
     <module>laokou-common-plugin</module>
     <module>laokou-common-dubbo</module>
   </modules>
