--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -30,7 +30,7 @@
     <!--项目版本-->
     <laokou.version>3.5.1</laokou.version>
     <!--spring-boot版本-->
-    <spring-boot.version>3.5.1-SNAPSHOT</spring-boot.version>
+    <spring-boot.version>3.5.1</spring-boot.version>
     <!--lombok版本-->
     <lombok.version>1.18.38</lombok.version>
     <!--postgresql版本-->
