--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -30,7 +30,7 @@
     <!--项目版本-->
     <laokou.version>3.5.1</laokou.version>
     <!--spring-boot版本-->
-    <spring-boot.version>3.5.1</spring-boot.version>
+    <spring-boot.version>3.5.3</spring-boot.version>
     <!--lombok版本-->
     <lombok.version>1.18.38</lombok.version>
     <!--postgresql版本-->
@@ -163,11 +163,18 @@
     <spring-cloud-starter-circuitbreaker-reactor-resilience4j.version>3.3.0</spring-cloud-starter-circuitbreaker-reactor-resilience4j.version>
     <!--dubbo-serialization版本-->
     <dubbo-serialization.version>3.3.1</dubbo-serialization.version>
+    <!--minio版本-->
+    <minio.version>8.5.17</minio.version>
   </properties>
 
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>io.minio</groupId>
+        <artifactId>minio</artifactId>
+        <version>${minio.version}</version>
+      </dependency>
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-actuator-autoconfigure</artifactId>
