--- a/laokou-common/laokou-common-oss/pom.xml
+++ b/laokou-common/laokou-common-oss/pom.xml
@@ -16,6 +16,16 @@
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk-s3</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.commons</groupId>
+          <artifactId>commons-logging</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>io.minio</groupId>
+      <artifactId>minio</artifactId>
     </dependency>
   </dependencies>
 
