refactor(): 重构oss，修复fory报错【升级版本】

--- a/laokou-service/laokou-oss/laokou-oss-client/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-client/pom.xml
@@ -12,7 +12,7 @@
   <dependencies>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-excel</artifactId>
+      <artifactId>laokou-common-core</artifactId>
     </dependency>
   </dependencies>
 
