--- a/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
@@ -56,6 +56,14 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-oss-client</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-oss</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-dubbo</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
