--- a/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
@@ -64,6 +64,10 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-dubbo</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-mybatis-plus</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
