--- a/laokou-common/laokou-common-oss/pom.xml
+++ b/laokou-common/laokou-common-oss/pom.xml
@@ -27,6 +27,10 @@
       <groupId>io.minio</groupId>
       <artifactId>minio</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-algorithm</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
