feat: auth拦截器加密

--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -87,6 +87,7 @@ spring:
             POST:
               - /v3/captchas/send/mail=laokou-gateway
               - /v3/captchas/send/mobile=laokou-gateway
+              - /oauth2/token=laokou-gateway
             DELETE:
               - /v3/tokens=laokou-gateway
   data:
