--- a/doc/deploy/docker-compose/docker-compose.yml
+++ b/doc/deploy/docker-compose/docker-compose.yml
@@ -14,6 +14,23 @@
 #  * limitations under the License.
 #  */
 services:
+  minio:
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
+    container_name: minio
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    command: server --console-address ":9001" /data
+    environment:
+      - TZ=Asia/Shanghai
+      - MINIO_ROOT_USER=minio
+      - MINIO_ROOT_PASSWORD=laokou123
+    ports:
+      - "9040:9000"
+      - "9011:9001"
+    volumes:
+      - ./minio/data:/data
   mysql:
     image: mysql:9.3
     container_name: mysql
