--- a/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-infrastructure/pom.xml
+++ b/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-infrastructure/pom.xml
@@ -53,8 +53,16 @@
       <artifactId>spring-cloud-starter-bootstrap</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-dubbo</artifactId>
+      <groupId>org.apache.dubbo.extensions</groupId>
+      <artifactId>dubbo-serialization-fury</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-spring-boot-starter</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.dubbo</groupId>
+      <artifactId>dubbo-nacos-spring-boot-starter</artifactId>
     </dependency>
   </dependencies>
 
