--- a/laokou-service/laokou-oss/laokou-oss-start/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-start/pom.xml
@@ -14,6 +14,12 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-oss-adapter</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-test</artifactId>
+      <scope>test</scope>
+      <optional>true</optional>
+    </dependency>
   </dependencies>
 
 </project>
