--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -52,7 +52,8 @@ jobs:
             ./laokou-service/laokou-auth/laokou-auth-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-generator/laokou-generator-start/target/site/jacoco/jacoco.xml,
             ./laokou-service/laokou-logstash/laokou-logstash-start/target/site/jacoco/jacoco.xml,
-            ./laokou-service/laokou-auth/laokou-auth-domain/target/site/jacoco/jacoco.xml
+            ./laokou-service/laokou-auth/laokou-auth-domain/target/site/jacoco/jacoco.xml,
+            ./laokou-service/laokou-oss/laokou-auth-start/target/site/jacoco/jacoco.xml
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Build with Maven
         run: mvn clean install -P dev -DskipTests -B
