--- a/laokou-common/laokou-common-rate-limiter/pom.xml
+++ b/laokou-common/laokou-common-rate-limiter/pom.xml
@@ -20,6 +20,10 @@
       <artifactId>jakarta.servlet-api</artifactId>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.laokou</groupId>
+      <artifactId>laokou-common-security</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
