--- a/laokou-common/laokou-common-bom/pom.xml
+++ b/laokou-common/laokou-common-bom/pom.xml
@@ -165,11 +165,23 @@
     <dubbo-serialization.version>3.3.1</dubbo-serialization.version>
     <!--minio版本-->
     <minio.version>8.5.17</minio.version>
+    <!--spring-security版本-->
+    <spring-security.version>6.5.1</spring-security.version>
   </properties>
 
   <!-- 定义全局jar版本,模块使用需要再次引入但不用写版本号 -->
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-oauth2-core</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework.security</groupId>
+        <artifactId>spring-security-core</artifactId>
+        <version>${spring-security.version}</version>
+      </dependency>
       <dependency>
         <groupId>io.minio</groupId>
         <artifactId>minio</artifactId>
