--- a/laokou-common/laokou-common-security/pom.xml
+++ b/laokou-common/laokou-common-security/pom.xml
@@ -48,7 +48,7 @@
     </dependency>
     <dependency>
       <groupId>org.laokou</groupId>
-      <artifactId>laokou-common-tenant</artifactId>
+      <artifactId>laokou-common-mybatis-plus</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
