fix: auth和admin启动报错

--- a/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
@@ -78,6 +78,16 @@
       <groupId>org.laokou</groupId>
       <artifactId>laokou-common-mybatis-plus</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-bootstrap</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.bouncycastle</groupId>
+          <artifactId>bcprov-jdk18on</artifactId>
+        </exclusion>
+      </exclusions>
+    </dependency>
   </dependencies>
 
 </project>
