--- a/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/src/main/resources/bootstrap.yml
@@ -11,6 +11,6 @@ dubbo:
     port: ${PROTOCOL_PORT:1112}
     serialization: fury-compatible
   application:
-    name: dubbo-${spring.application.name}
+    name: ${spring.application.name}
     logger: slf4j
     qos-port: ${QOS_PORT:1113}
