--- a/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-distributed-identifier/laokou-distributed-identifier-start/src/main/resources/bootstrap.yml
@@ -9,7 +9,7 @@ dubbo:
   protocol:
     name: dubbo
     port: ${PROTOCOL_PORT:1112}
-    serialization: fury-compatible
+    serialization: fury
   application:
     name: ${spring.application.name}
     logger: slf4j
