--- a/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/bootstrap.yml
+++ b/laokou-service/laokou-iot/laokou-iot-start/src/main/resources/bootstrap.yml
@@ -58,7 +58,7 @@ dubbo:
   protocol:
     name: dubbo
     port: ${PROTOCOL_PORT:1120}
-    serialization: fury-compatible
+    serialization: fury
   application:
     name: dubbo-${spring.application.name}
     logger: slf4j
