--- a/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
+++ b/laokou-service/laokou-oss/laokou-oss-infrastructure/pom.xml
@@ -63,8 +63,18 @@
       <artifactId>laokou-common-oss</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.apache.fury</groupId>
+      <artifactId>fury-core</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.apache.dubbo.extensions</groupId>
       <artifactId>dubbo-serialization-fury</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.apache.fury</groupId>
+          <artifactId>fury-core</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.apache.dubbo</groupId>
@@ -89,5 +99,4 @@
       </exclusions>
     </dependency>
   </dependencies>
-
 </project>
